--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/post_app
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 springdoc.swagger-ui.enabled=true 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
